@@ -20,6 +20,8 @@ package com.meterware.pseudoserver;
  *
  *******************************************************************************************************************/
 import java.util.Vector;
+import java.util.Enumeration;
+import java.util.StringTokenizer;
 
 import junit.framework.TestCase;
 
@@ -90,6 +92,12 @@ public class HttpUserAgentTest extends TestCase {
     protected String getHostPath() {
         return _hostPath;
     }
+
+
+    protected void assertEqualQueries( String query1, String query2 ) {
+        assertEquals( new QuerySpec( query1 ), new QuerySpec( query2 ) );
+    }
+
 
 
     protected void assertEquals( String comment, Object[] expected, Object[] found ) {
@@ -172,4 +180,44 @@ public class HttpUserAgentTest extends TestCase {
         return sb.toString();
     }
 
+    static class QuerySpec {
+        QuerySpec( String urlString ) {
+            if (urlString.indexOf( '?' ) < 0) {
+                _path = urlString;
+            } else {
+                _path = urlString.substring( 0, urlString.indexOf( '?' ) );
+            }
+            _fullString = urlString;
+
+            StringTokenizer st = new StringTokenizer( urlString.substring( urlString.indexOf( '?' )+ 1 ), "&" );
+            while (st.hasMoreTokens()) _parameters.addElement( st.nextToken() );
+        }
+
+        public String toString() {
+            return _fullString;
+        }
+
+        public boolean equals( Object o ) {
+            return getClass().equals( o.getClass() ) && equals( (QuerySpec) o );
+        }
+
+        private String _path;
+        private String _fullString;
+        private Vector _parameters = new Vector();
+
+        private boolean equals( QuerySpec o ) {
+            if (!_path.equals( o._path )) {
+                return false;
+            } else if (_parameters.size() != o._parameters.size() ) {
+                return false;
+            } else {
+                for (Enumeration e = o._parameters.elements(); e.hasMoreElements();) {
+                    if (!_parameters.contains( e.nextElement() )) return false;
+                }
+                return true;
+            }
+        }
+    }
 }
+
+
